# pywebdav

./: .gitignore  .pre-commit-config.yaml  README.md  README_TURNIN.md  demo.py  pyproject.toml  requirements.txt  submission.tar
.github/workflows/: create-tar.yml  python-package.yml
pywebdav/: __init__.py  _unasync_compat.py  cli.py  shell_client.py  types.py  utils.py
pywebdav/_async/: __init__.py
pywebdav/_sync/: __init__.py
tests/: test_client.py  test_path_resolution.py
