[tool.poetry]
name = "pywebdav"
version = "0.1.0"
description = "WebDAV client implementation in Python"
authors = ["anand2312 <40204976+anand2312@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
