[tool.poetry]
name = "pywebdav"
version = "0.1.0"
description = "WebDAV client implementation in Python"
authors = ["anand2312 <40204976+anand2312@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.3.0"
unasync-cli = "^0.0.9"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
